re-enable ESLint

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,24 +15,22 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-  ## ESLint is disabled while a nested dependency is broken.
-  ## When re-enabling, add `eslint` to `publish`'s `needs` array.
-  # eslint:
-  #   needs: install
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setup Node
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         cache: yarn
-  #         check-latest: true
-  #         node-version: 'lts/*'
-  #     - name: Install dependencies
-  #       run: yarn install
-  #     - name: Lint
-  #       run: yarn eslint
+  eslint:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          cache: yarn
+          check-latest: true
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: yarn install
+      - name: Lint
+        run: yarn eslint
 
   jest:
     needs: install
@@ -77,7 +75,7 @@ jobs:
             types
 
   publish:
-    needs: [jest, rollup]
+    needs: [eslint, jest, rollup]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
