--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,5 @@
 name: Pull request
+
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -14,23 +15,22 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-  ## ESLint is disabled while a nested dependency is broken.
-  # eslint:
-  #   needs: install
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setup Node
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         cache: yarn
-  #         check-latest: true
-  #         node-version: 'lts/*'
-  #     - name: Install dependencies
-  #       run: yarn install
-  #     - name: Lint
-  #       run: yarn eslint
+  eslint:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          cache: yarn
+          check-latest: true
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: yarn install
+      - name: Lint
+        run: yarn eslint
 
   jest:
     needs: install
