--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sentry-react",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Charles Stover <sentry-react@charlesstover.com>",
   "description": "A React component for instantiating Sentry",
   "homepage": "https://www.npmjs.com/package/sentry-react",
@@ -41,39 +41,40 @@
     "url": "https://github.com/CharlesStover/sentry-react.git"
   },
   "dependencies": {
-    "@sentry/react": "^6.13.2",
-    "@sentry/types": "^6.13.2"
+    "@sentry/react": "^6.13.3",
+    "@sentry/types": "^6.13.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@testing-library/react": "^12.1.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.6",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "@yarnpkg/sdks": "^2.4.2-rc.6",
-    "eslint": "^7.32.0",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "@yarnpkg/sdks": "^2.5.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.2.1",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "rollup": "^2.57.0",
+    "rollup": "^2.58.3",
     "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
